data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1858.wast
;; 9. **Test Misordered Operand Stack Prior to Branch**:    - **Description**: Arrange the operand stack in an incorrect order before the `br_if` instruction.    - **Constraint Checked**: Ensures correct order of operands preceding `br_if` and proper type validation.    - **Relation to Type Mismatch**: Verifies operand order relevance to type matching.

(assert_invalid
  (module (func $misordered-operand-stack
    (block
      (i32.const 1)
      (f32.const 2.0) (i32.const 1)
      (br_if 0)
    )
  ))
  "type mismatch"
)